First round played / backup point before restructuring